Issue #93: Improve density and dark mode on Layout "Add Block" modal. Fixes #93.

--- a/styles/base/_backdrop-overrides.scss
+++ b/styles/base/_backdrop-overrides.scss
@@ -560,6 +560,22 @@ fieldset.collapsible.collapsed {
   }
 }
 
+.layout-block-list-wrapper {
+  border: none;
+}
+
+.layout-block-add-row {
+  &.form-item {
+    padding: var(--gin-spacing-density-m) var(--gin-spacing-m);
+    border-top: 1px solid var(--gin-border-color);
+    border-bottom: none;
+  }
+
+  &.odd {
+    background-color: transparent;
+  }
+}
+
 #user-admin-permissions {
   .search-reset {
     line-height: inherit;
